@@ -23,3 +23,10 @@ Fixes
 
  - Fixed an issue that caused ``cluster.name`` setting in ``crate.yml`` file
    to be overridden by default name ``crate``.
+
+ - Fixed a NPE when using explicit join conditions with fields which
+   were not contained in the select list. For example::
+
+     SELECT t3.z FROM t1
+     JOIN t2 ON t1.a = t2.b
+     JOIN t3 ON t2.b = t3.c
